crates/sui-graphql-macros/tests/compile/enum_not_supported.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/compile/enum_not_supported.rs:3:10
  |
3 | #[derive(QueryResponse)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `QueryResponse` (in Nightly builds, run with -Z macro-backtrace for more info)
